resources/scss/partials/_card_infos.scss
@use "./mixin" as *;

.pg-main-wrapper{
  .container{
    @include container;
    flex-direction: column;
    position: relative;
    text-align: center;
    max-width: 1000px;
    .col{
      display: flex;
      text-align: start;
      h1, h4{
        color: darken($blue, 25%);
      }
      .pg-price-container{
        background-color: #55BA59;
        color: $white;
        display: flex;
        justify-content: space-between;
        .left{
          display: flex;
          justify-content: space-between;
          width: 70%;
        }
        .right{
          width: 30%;
        }
      }
    }
  }
  .pg-img-wrapper{
    height: 80px;
    background-color: $blue;
    .pg-img-container{
      @include container;
      max-width: 1000px;
      justify-content: start;
      img{
        transform: translate(0, -85%);
        width: 200px;
        aspect-ratio: 2/3;
        object-fit: cover;
        border: 2px solid $white;
        box-shadow: 0 0 30px rgba(0, 0, 0, 0.425);
      }
    }
  }
}

